[package]
name = "uapi-version"
version = "0.1.0"
description = "Compare versions according to the UAPI Version Format Specification"
keywords = ["version", "uapi", "systemd"]
homepage = "https://github.com/nikstur/uapi-version"
repository = "https://github.com/nikstur/uapi-version"
readme = "README.md"
license = "MIT"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny" }
pedantic = { level = "deny" }
unwrap_used = { level = "deny" }
expect_used = { level = "deny" }
